--- a/zgallery-frontend/src/css/Thumbnail.css
+++ b/zgallery-frontend/src/css/Thumbnail.css
@@ -21,12 +21,14 @@
     display: inline-block;
 }
 
+.Thumbnail-image {
+    filter: grayscale(50%);
+}
+
 @media only screen and (max-width: 700px) {
     .Thumbnail-image {
         filter: grayscale(50%);
-        height: 100%;
         width: 100%;
-        max-width: 100%;
         max-height: 100%;
         object-fit: cover;
     }
